# pricepredictorcsc3380

./: CMakeLists.txt
code/: DataFrame.h  Gui.cpp  Gui.h  IndicatorBacktestCpp.cpp  TechnicalIndicators.cpp  TechnicalIndicators.h  getPath.cpp  getPath.h  get_data.py  indicator_backtest.py  modeling.py  project.cpp  run_py.py  sentiment_analysis.py
csc3380-fall-2023-project-group-3/: README.md  setup_and_run.sh
csc3380-fall-2023-project-group-3/code/: DataFrame.cpp
csc3380-fall-2023-project-group-3/csc3380-fall-2023-project-group-3/: README.md  setup_and_run.sh
csc3380-fall-2023-project-group-3/csc3380-fall-2023-project-group-3/code/: DataFrame.cpp  DataFrame.h  Gui.cpp  Gui.h  IndicatorBacktestCpp.h  get_path.py
csc3380-fall-2023-project-group-3/csc3380-fall-2023-project-group-3/documents/: Profit_Predictors (1).docx
documents/: Profit Predictors.docx  ProjectPortfolioTemplate (1).docx
